@startuml
class Compressor {
    + iPort: Port
    + oPort: Port
}
class Condenser {
    + iPort: Port
    + oPort: Port
}
class Evaporator {
    + iPort: Port
    + oPort: Port
}
class ExpansionValve {
    + iPort: Port
    + oPort: Port
}
Compressor "1" *-- "2" Port
ExpansionValve "1" *-- "2" Port
Evaporator "1" *-- "2" Port
Condenser "1" *-- "2" Port
@enduml

